2009-07-06  Sam Steingold  <sds@gnu.org>

	* constsym.d (:OPERATION, :OPERANDS): add
	* error.d (end_error): complete :OPERATION, :OPERANDS
	for ARITHMETIC-ERROR and its subtypes
	* aridecl.d (divide_0, error_overflow, error_underflow):
	push :OPERATION and :OPERANDS
	* flo_konv.d (error_nan): ditto
	* intelem.d (BN_ueberlauf): ditto
	* intlog.d (I_I_ash_I): ditto
	* intmal.d (mal_ueberlauf): ditto
	* lfloat.d (error_LF_toolong): ditto
	Reported by Gabriel Dos Reis <gdr@integrable-solutions.net>

2009-07-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): use http://clisp.cons.org/beta instead
	of http://clisp.podval.org/impnotes/ because the latter has been
	flaky lately; keep this in sync with doc/Makefile!

2009-07-06  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:ACCESS-HOSTS): check the return
	value of gethostbyaddr and only call hostent_to_lisp on non-NULL
	Reported by Reini Urban <rurban@x-ray.at>

2009-07-02  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: simplify object pinning and export it properly
	* lispbibl.d (struct pinned_chain_t): redefine. pinned object is always
	on the stack and pointer to it is kept. export it for modules
	(pin_varobject, unpin_varobject): do not use UNWIND_PROTECT frame. in
	case on non-local exit the object will be unpinned from
	enter_frame_at_STACK (like back_trace is unwound)
	(unwind_pinned_objects): unpins all objects beyond some position in the
	stack
	(enter_frame_at_STACK): use it
	* spvw_garcol.d (gar_col_normal, fill_relocation_memory_regions)
	(page_contains_pinned_object): update usage of pinned_chain_t

2009-07-01  Sam Steingold  <sds@gnu.org>

	* modules/wildcard/configure.in: use $gl_cv_func_fnmatch_gnu
	instead of $ac_cv_func_fnmatch_gnu (fnmatch - serial 4);
	do not link ../gllib/fnmatch.h locally, CPPFLAGS takes care of it

2009-07-01  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCPPFLAGS): use a full patch for gllib because
	CPPFLAGS is passed on to module subdirs
